--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<header>
 		<!--  Navigation -->
-		<div class="brand d-none d-md-block">
+		<div class="brand">
 			<div class="container">
 				<h1>
 					<a href="#">Pregnancy</a>
@@ -83,13 +83,44 @@
 	        </div>
 	    </nav>
 	    <!-- Navbar Mobile -->
-    	<nav id="navbar-mobile" class="navbar navbar-light d-block d-md-none">
+    	<!-- nav id="navbar-mobile-prueba" class="navbar navbar-light d-block d-md-none">
         	<div class="container">
 	            <a class="navbar-brand" href="#">Pregnancy</a>
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
 	            </button>
  	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div>
+        	</div>
+    	</nav -->
+	    <!-- Navbar Mobile prueba -->
+    	<nav id="navbar-mobile" class="navbar navbar-light fixed-bottom d-block d-md-none">
+        	<div class="container">
+        		<a class="navbar-brand" href="#"></a>
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+ 	            <div class="collapse navbar-collapse" id="navbarNav1">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="menu.html">Menú 1</a>
@@ -124,21 +155,27 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
+                	<!-- Imagen para Ordenador -->
                     <img class="d-none d-md-block w-100" src="images/index_slide01.jpg">
+                    <!-- Imagen para Movíl -->
                     <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
                         <h1>Take care of yourself and the miracle inside you</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
+                	<!-- Imagen para Ordenador -->
                     <img class="d-none d-md-block w-100" src="images/index_slide02.jpg">
+                    <!-- Imagen para Movíl -->
                     <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything for your health and the health of your baby</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
+                	<!-- Imagen para Ordenador -->
                     <img class="d-none d-md-block w-100" src="images/index_slide03.jpg">
+                    <!-- Imagen para Movíl -->
                     <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
@@ -151,7 +188,7 @@
 	<section class="section-home-two">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
-			<div class="row">
+			<!-- div class="row">
 				<div class="col-12 col-sm-12 col-md-8">
 					<article>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -161,7 +198,18 @@
 						cillum dolore eu fugiat nulla pariatur.</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi.</p>
+						quis nostrud exercitation ullamco laboris nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						<div class="call-to-action">
 							<a class="btn" href="#">Leer Más</a>
 						</div>
@@ -169,7 +217,36 @@
 				</div>
 				<div class="col-12 col-sm-12 col-md-4">
 					<div class="content-image">
-						<img src="http://via.placeholder.com/380x320">
+						<img src="http://via.placeholder.com/300x250">
+					</div>
+				</div>
+			</div  -->
+			<div class="row">
+				<div class="col-12">
+					<img class="image-content" src="http://via.placeholder.com/300x250" hspace="20" vspace="7" style="float: right;">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div class="call-to-action">
+						<a class="btn" href="#">Leer Más</a>
 					</div>
 				</div>
 			</div>
