--- a/menu.html
+++ b/menu.html
@@ -22,8 +22,9 @@
 </head>
 <body>
 	<header>
+	<header>
 		<!--  Navigation -->
-		<div class="brand d-none d-md-block">
+		<div class="brand">
 			<div class="container">
 				<h1>
 					<a href="#">Pregnancy</a>
@@ -83,13 +84,13 @@
 	        </div>
 	    </nav>
 	    <!-- Navbar Mobile -->
-    	<nav id="navbar-mobile" class="navbar navbar-light d-block d-md-none">
+    	<nav id="navbar-mobile" class="navbar navbar-light fixed-bottom d-block d-md-none">
         	<div class="container">
-	            <a class="navbar-brand" href="#">Pregnancy</a>
-	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        		<a class="navbar-brand" href="#"></a>
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
 	            </button>
- 	            <div class="collapse navbar-collapse" id="navbarNav">
+ 	            <div class="collapse navbar-collapse" id="navbarNav1">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="menu.html">Menú 1</a>
