--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="images/favicon.png" rel="icon" type="image/png" />
+	<link href="images/favicon.png" rel="icon" type="image/png"/>
 	<link rel="preload" media="screen" as="style" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
 	<noscript>
     	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -157,39 +157,6 @@
 	<section class="section-home-two">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
-			<!-- div class="row">
-				<div class="col-12 col-sm-12 col-md-8">
-					<article>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<div class="call-to-action">
-							<a class="btn" href="#">Leer Más</a>
-						</div>
-					</article>
-				</div>
-				<div class="col-12 col-sm-12 col-md-4">
-					<div class="content-image">
-						<img src="http://via.placeholder.com/300x250">
-					</div>
-				</div>
-			</div  -->
 			<div class="row">
 				<div class="col-12">
 					<img class="image-content" src="http://via.placeholder.com/300x250" hspace="20" vspace="7" style="float: right;">
@@ -388,7 +355,7 @@
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script src="js/plugins/wow.js"></script>
+	<script src="js/wow.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
