--- a/menu.html
+++ b/menu.html
@@ -119,38 +119,6 @@
 	<section class="section-menu-one">
 		<div class="container">
 			<h2>Looking good during pregnancy</h2>
-			<!-- div class="row">
-				<div class="col-md-5 d-none d-md-block">
-					<div class="content-image">
-						<img src="http://via.placeholder.com/440x360">
-					</div>
-				</div>
-				<div class="col-12 col-sm-12 col-md-7">
-					<article>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. sed do eiusmod.</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat.</p>
-					</article>
-				</div>
-				<div class="col-12 col-sm-12 col-md-5 d-block d-md-none">
-					<div class="content-image">
-						<img src="http://via.placeholder.com/440x360">
-					</div>
-				</div>
-			</div -->
 			<div class="row">
 				<div class="col-12">
 					<img class="image-content" src="http://via.placeholder.com/300x250" hspace="20" vspace="7" style="float: left;">
@@ -183,37 +151,6 @@
 	<section class="section-menu-two">
 		<div class="container">
 			<h2>Getting ready for baby</h2>
-			<!-- div class="row">
-				<div class="col-12 col-sm-12 col-md-8">
-					<article>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</article>
-				</div>
-				<div class="col-12 col-sm-12 col-md-4">
-					<div class="content-image">
-						<img src="http://via.placeholder.com/350x330">
-					</div>
-				</div>
-			</div -->
 			<div class="row">
 				<div class="col-12">
 					<img class="image-content" src="http://via.placeholder.com/300x250" hspace="20" vspace="7" style="float: right;">
@@ -259,7 +196,7 @@
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script src="js/plugins/wow.js"></script>
+	<script src="js/wow.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
